[package]
name = "icon-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {  version = "0.11.25", features = ["json"] }
serde_json = {  version = "1.0.114", features = ["preserve_order"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
rust_decimal = "1.34.3"
