[package]
name = "icon-sdk"
version = "1.1.0"
edition = "2021"
description = "ICON(ICX) SDK for Rust"
authors = ["Dimitris Frangiadakis <dimitris@frangiadakis.com>"]
readme = "README.md"
repository = "https://github.com/mitsosf/icon-sdk-rust"
license = "MIT"
keywords = ["icon", "icx", "sdk", "blockchain"]


[dependencies]
reqwest = {  version = "0.11.25", features = ["json"] }
serde_json = {  version = "1.0.114", features = ["preserve_order"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
rust_decimal = "1.34.3"
sha3 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = {  version = "0.28.2", features = ["rand", "recovery", "hashes"] }
thiserror = "1.0.57"
chrono = "0.4.35"
base64 = "0.22.0"
